--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "nanoid": "^3.3.4",
     "node-sass": "^7.0.1",
