--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "lodash": "^4.17.21",
+    "lodash.isempty": "^4.4.0",
     "mini-css-extract-plugin": "^2.4.5",
     "nanoid": "^3.3.4",
     "node-sass": "^7.0.1",
